syntax="proto3";

package user_service;
option go_package="genproto/user_service";

import "user.proto";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc GetUserByID(GetUserByIDRequest) returns (GetUsersResponse) {}
    rpc GetAllUsers(GetUsersRequest) returns (GetUsersResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}